chore: tidy/simplify RubyBundleAuditAnalyzer code
Signed-off-by: Chad Wilson <29788154+chadlwilson@users.noreply.github.com>